[gd_scene load_steps=48 format=2]

[ext_resource path="res://Characters/Enemies/ProfessorLang/ProfessorLangFSM.gd" type="Script" id=1]
[ext_resource path="res://Characters/Enemies/ProfessorLang/ProfessorLang.gd" type="Script" id=2]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://Art/Neu/JuraWalk.png" type="Texture" id=4]
[ext_resource path="res://Art/Neu/JuraStudentIdle.png" type="Texture" id=5]
[ext_resource path="res://Characters/Enemies/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/healthbosstheme.tres" type="Theme" id=7]
[ext_resource path="res://Characters/Hitbox.gd" type="Script" id=8]
[ext_resource path="res://Art/Neu/Boss.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 39, 72 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 39, 0, 39, 72 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 78, 0, 39, 72 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 0, 72, 39, 72 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 39, 72, 39, 72 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 78, 72, 39, 72 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 0, 144, 39, 72 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 39, 144, 39, 72 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 9 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 9 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "explosion",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "idle1",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "move1",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=40]
radius = 7.0
height = 8.0

[sub_resource type="Animation" id=39]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle", "explosion" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=21]
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=22]
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "move" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=57]
radius = 7.5
height = 8.0

[sub_resource type="CircleShape2D" id=58]
radius = 24.0052

[sub_resource type="CapsuleShape2D" id=67]
radius = 8.0
height = 9.0

[node name="Endboss" instance=ExtResource( 6 )]
position = Vector2( 247, 99 )
scale = Vector2( 2, 2 )
collision_mask = 32769
script = ExtResource( 2 )
max_hp = 20
hp = 20
projectile_speed = 100

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource( 1 )

[node name="AnimatedSprite" parent="." index="1"]
position = Vector2( -1, 0 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 17 )
animation = "move"
playing = true
flip_h = true

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -2, 0 )
shape = SubResource( 40 )

[node name="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 39 )
anims/dead = SubResource( 19 )
anims/hurt = SubResource( 20 )
anims/idle = SubResource( 21 )
anims/move = SubResource( 22 )

[node name="PathTimer" parent="." index="4"]
wait_time = 0.2

[node name="AttackTimer" type="Timer" parent="." index="5"]

[node name="AimRayCast" type="RayCast2D" parent="." index="6"]
enabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="8"]
position = Vector2( 1, 0 )
shape = SubResource( 57 )

[node name="Area2D" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 58 )

[node name="Node2D" type="Node2D" parent="Area2D" index="1"]
position = Vector2( 23.5, 2.5 )

[node name="Node2D2" type="Node2D" parent="Area2D" index="2"]
position = Vector2( 18.5, 17 )

[node name="Node2D3" type="Node2D" parent="Area2D" index="3"]
position = Vector2( 0, 23 )

[node name="Node2D4" type="Node2D" parent="Area2D" index="4"]
position = Vector2( -24, 2.5 )

[node name="Node2D5" type="Node2D" parent="Area2D" index="5"]
position = Vector2( -18, 17 )

[node name="Node2D6" type="Node2D" parent="Area2D" index="6"]
position = Vector2( 18.5, -16.5 )

[node name="Node2D7" type="Node2D" parent="Area2D" index="7"]
position = Vector2( -18, -16.5 )

[node name="Node2D8" type="Node2D" parent="Area2D" index="8"]
position = Vector2( 1, -22.5 )

[node name="BossHealth" type="ProgressBar" parent="." index="10"]
margin_left = -20.5
margin_top = -22.5
margin_right = 19.5
margin_bottom = -8.5
rect_scale = Vector2( 1, 0.3 )
theme = ExtResource( 7 )
max_value = 20.0
value = 20.0
percent_visible = false

[node name="Node2D" type="Node2D" parent="." index="11"]
position = Vector2( -4, 14.5 )

[node name="Node2D2" type="Node2D" parent="." index="12"]
position = Vector2( -1, 14.5 )

[node name="Node2D3" type="Node2D" parent="." index="13"]
position = Vector2( 2, 14.5 )

[node name="Node2D4" type="Node2D" parent="." index="14"]
position = Vector2( 4.5, 14.5 )

[node name="MovementStateTimer" type="Timer" parent="." index="15"]
wait_time = 5.0

[node name="RandomMovementTimer" type="Timer" parent="." index="16"]

[node name="Hitbox" type="Area2D" parent="." index="17"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -2, 0 )
shape = SubResource( 67 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="MovementStateTimer" to="." method="_on_MovementStateTimer_timeout"]
[connection signal="timeout" from="RandomMovementTimer" to="." method="_on_RandomMovementTimer_timeout"]
